Fix issue with the new gaps

--- a/style/css/layout.css
+++ b/style/css/layout.css
@@ -20,5 +20,4 @@ div.menuButtons {
     display: grid;
     grid-gap: 10px;
     grid-auto-flow: row;
-    grid-template-rows: repeat(20, min-content);
 }
